@@ -19,6 +19,7 @@
 #include <assert.h>
 #include <fcntl.h>
 #include <limits.h>
+#include <termios.h>
 #include <unistd.h>
 #include <sys/types.h>
 #include <sys/ioctl.h>
